fix(fixing): not yet
수정이 더 필요함

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
     </div>
   </div>
-  <script src="./main.js"></script>
+  <script src="./change01.js"></script>
 </body>
 
 </html>
