--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </div>
   <div id="secPage" class="page">
     <div class="container">
+      <div id="txtlog"></div>
     </div>
   </div>
   <script src="./change01.js"></script>
